bison.output
Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: ε
    3          | stmt_list stmt

    4 stmt: simple_stmt NEWLINE
    5     | compound_stmt

    6 simple_stmt: assign_stmt
    7            | print_stmt
    8            | return_stmt

    9 assign_stmt: IDENTIFIER '=' expr

   10 print_stmt: PRINT '(' expr_list ')'

   11 return_stmt: RETURN expr

   12 compound_stmt: if_stmt
   13              | while_stmt
   14              | for_stmt
   15              | class_def
   16              | func_def

   17 if_stmt: IF '(' cond ')' ':' INDENT stmt_list DEDENT if_stmt_tail

   18 if_stmt_tail: elif_stmt if_stmt_tail
   19             | else_stmt
   20             | ε

   21 elif_stmt: ELIF '(' cond ')' ':' INDENT stmt_list DEDENT

   22 else_stmt: ELSE ':' INDENT stmt_list DEDENT

   23 while_stmt: WHILE '(' cond ')' ':' INDENT stmt_list DEDENT

   24 for_stmt: FOR IDENTIFIER IN expr ':' INDENT stmt_list DEDENT

   25 class_def: CLASS IDENTIFIER ':' inheritance INDENT stmt_list DEDENT

   26 inheritance: ε
   27            | IDENTIFIER inheritance_tail

   28 inheritance_tail: ε
   29                 | ',' IDENTIFIER inheritance_tail

   30 func_def: DEF IDENTIFIER '(' param_list ')' ':' INDENT stmt_list DEDENT

   31 param_list: ε
   32           | IDENTIFIER param_list_tail

   33 param_list_tail: ε
   34                | ',' IDENTIFIER param_list_tail

   35 cond: expr REL_OP expr
   36     | expr LOGIC_OP expr
   37     | NOT expr

   38 expr: term expr_tail
   39     | CONST_STRING
   40     | CONST_BOOL
   41     | IDENTIFIER '.' IDENTIFIER
   42     | call_expr

   43 expr_tail: ADD_OP term expr_tail
   44          | ε

   45 term: factor term_tail

   46 term_tail: MUL_OP factor term_tail
   47          | ε

   48 factor: '(' expr ')'
   49       | IDENTIFIER
   50       | NUMBER
   51       | UNARY_OP factor

   52 call_expr: IDENTIFIER '(' expr_list ')'

   53 expr_list: ε
   54          | expr expr_list_tail

   55 expr_list_tail: ε
   56               | ',' expr expr_list_tail


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 17 21 23 30 48 52
    ')' (41) 10 17 21 23 30 48 52
    ',' (44) 29 34 56
    '.' (46) 41
    ':' (58) 17 21 22 23 24 25 30
    '=' (61) 9
    error (256)
    IDENTIFIER <sval> (258) 9 24 25 27 29 30 32 34 41 49 52
    CONST_STRING <sval> (259) 39
    NUMBER <ival> (260) 50
    CONST_BOOL (261) 40
    INDENT (262) 17 21 22 23 24 25 30
    DEDENT (263) 17 21 22 23 24 25 30
    NEWLINE (264) 4
    IF (265) 17
    ELIF (266) 21
    ELSE (267) 22
    WHILE (268) 23
    FOR (269) 24
    PRINT (270) 10
    CLASS (271) 25
    DEF (272) 30
    RETURN (273) 11
    ADD_OP (274) 43
    MUL_OP (275) 46
    UNARY_OP (276) 51
    REL_OP (277) 35
    LOGIC_OP (278) 36
    NOT (279) 37
    IN (280) 24


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    stmt_list (34)
        on left: 2 3
        on right: 1 3 17 21 22 23 24 25 30
    stmt (35)
        on left: 4 5
        on right: 3
    simple_stmt (36)
        on left: 6 7 8
        on right: 4
    assign_stmt (37)
        on left: 9
        on right: 6
    print_stmt (38)
        on left: 10
        on right: 7
    return_stmt (39)
        on left: 11
        on right: 8
    compound_stmt (40)
        on left: 12 13 14 15 16
        on right: 5
    if_stmt (41)
        on left: 17
        on right: 12
    if_stmt_tail (42)
        on left: 18 19 20
        on right: 17 18
    elif_stmt (43)
        on left: 21
        on right: 18
    else_stmt (44)
        on left: 22
        on right: 19
    while_stmt (45)
        on left: 23
        on right: 13
    for_stmt (46)
        on left: 24
        on right: 14
    class_def (47)
        on left: 25
        on right: 15
    inheritance (48)
        on left: 26 27
        on right: 25
    inheritance_tail (49)
        on left: 28 29
        on right: 27 29
    func_def (50)
        on left: 30
        on right: 16
    param_list (51)
        on left: 31 32
        on right: 30
    param_list_tail (52)
        on left: 33 34
        on right: 32 34
    cond (53)
        on left: 35 36 37
        on right: 17 21 23
    expr (54)
        on left: 38 39 40 41 42
        on right: 9 11 24 35 36 37 48 54 56
    expr_tail (55)
        on left: 43 44
        on right: 38 43
    term (56)
        on left: 45
        on right: 38 43
    term_tail (57)
        on left: 46 47
        on right: 45 46
    factor (58)
        on left: 48 49 50 51
        on right: 45 46 51
    call_expr (59)
        on left: 52
        on right: 42
    expr_list (60)
        on left: 53 54
        on right: 10 52
    expr_list_tail (61)
        on left: 55 56
        on right: 54 56


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    $default  reduce using rule 1 (program)

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 3

    0 $accept: program $end •

    $default  accept


State 4

    9 assign_stmt: IDENTIFIER • '=' expr

    '='  shift, and go to state 23


State 5

   17 if_stmt: IF • '(' cond ')' ':' INDENT stmt_list DEDENT if_stmt_tail

    '('  shift, and go to state 24


State 6

   23 while_stmt: WHILE • '(' cond ')' ':' INDENT stmt_list DEDENT

    '('  shift, and go to state 25


State 7

   24 for_stmt: FOR • IDENTIFIER IN expr ':' INDENT stmt_list DEDENT

    IDENTIFIER  shift, and go to state 26


State 8

   10 print_stmt: PRINT • '(' expr_list ')'

    '('  shift, and go to state 27


State 9

   25 class_def: CLASS • IDENTIFIER ':' inheritance INDENT stmt_list DEDENT

    IDENTIFIER  shift, and go to state 28


State 10

   30 func_def: DEF • IDENTIFIER '(' param_list ')' ':' INDENT stmt_list DEDENT

    IDENTIFIER  shift, and go to state 29


State 11

   11 return_stmt: RETURN • expr

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 36
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 12

    3 stmt_list: stmt_list stmt •

    $default  reduce using rule 3 (stmt_list)


State 13

    4 stmt: simple_stmt • NEWLINE

    NEWLINE  shift, and go to state 40


State 14

    6 simple_stmt: assign_stmt •

    $default  reduce using rule 6 (simple_stmt)


State 15

    7 simple_stmt: print_stmt •

    $default  reduce using rule 7 (simple_stmt)


State 16

    8 simple_stmt: return_stmt •

    $default  reduce using rule 8 (simple_stmt)


State 17

    5 stmt: compound_stmt •

    $default  reduce using rule 5 (stmt)


State 18

   12 compound_stmt: if_stmt •

    $default  reduce using rule 12 (compound_stmt)


State 19

   13 compound_stmt: while_stmt •

    $default  reduce using rule 13 (compound_stmt)


State 20

   14 compound_stmt: for_stmt •

    $default  reduce using rule 14 (compound_stmt)


State 21

   15 compound_stmt: class_def •

    $default  reduce using rule 15 (compound_stmt)


State 22

   16 compound_stmt: func_def •

    $default  reduce using rule 16 (compound_stmt)


State 23

    9 assign_stmt: IDENTIFIER '=' • expr

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 41
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 24

   17 if_stmt: IF '(' • cond ')' ':' INDENT stmt_list DEDENT if_stmt_tail

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    NOT           shift, and go to state 42
    '('           shift, and go to state 35

    cond       go to state 43
    expr       go to state 44
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 25

   23 while_stmt: WHILE '(' • cond ')' ':' INDENT stmt_list DEDENT

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    NOT           shift, and go to state 42
    '('           shift, and go to state 35

    cond       go to state 45
    expr       go to state 44
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 26

   24 for_stmt: FOR IDENTIFIER • IN expr ':' INDENT stmt_list DEDENT

    IN  shift, and go to state 46


State 27

   10 print_stmt: PRINT '(' • expr_list ')'

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    $default  reduce using rule 53 (expr_list)

    expr       go to state 47
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39
    expr_list  go to state 48


State 28

   25 class_def: CLASS IDENTIFIER • ':' inheritance INDENT stmt_list DEDENT

    ':'  shift, and go to state 49


State 29

   30 func_def: DEF IDENTIFIER • '(' param_list ')' ':' INDENT stmt_list DEDENT

    '('  shift, and go to state 50


State 30

   41 expr: IDENTIFIER • '.' IDENTIFIER
   49 factor: IDENTIFIER •
   52 call_expr: IDENTIFIER • '(' expr_list ')'

    '('  shift, and go to state 51
    '.'  shift, and go to state 52

    $default  reduce using rule 49 (factor)


State 31

   39 expr: CONST_STRING •

    $default  reduce using rule 39 (expr)


State 32

   50 factor: NUMBER •

    $default  reduce using rule 50 (factor)


State 33

   40 expr: CONST_BOOL •

    $default  reduce using rule 40 (expr)


State 34

   51 factor: UNARY_OP • factor

    IDENTIFIER  shift, and go to state 53
    NUMBER      shift, and go to state 32
    UNARY_OP    shift, and go to state 34
    '('         shift, and go to state 35

    factor  go to state 54


State 35

   48 factor: '(' • expr ')'

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 55
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 36

   11 return_stmt: RETURN expr •

    $default  reduce using rule 11 (return_stmt)


State 37

   38 expr: term • expr_tail

    ADD_OP  shift, and go to state 56

    $default  reduce using rule 44 (expr_tail)

    expr_tail  go to state 57


State 38

   45 term: factor • term_tail

    MUL_OP  shift, and go to state 58

    $default  reduce using rule 47 (term_tail)

    term_tail  go to state 59


State 39

   42 expr: call_expr •

    $default  reduce using rule 42 (expr)


State 40

    4 stmt: simple_stmt NEWLINE •

    $default  reduce using rule 4 (stmt)


State 41

    9 assign_stmt: IDENTIFIER '=' expr •

    $default  reduce using rule 9 (assign_stmt)


State 42

   37 cond: NOT • expr

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 60
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 43

   17 if_stmt: IF '(' cond • ')' ':' INDENT stmt_list DEDENT if_stmt_tail

    ')'  shift, and go to state 61


State 44

   35 cond: expr • REL_OP expr
   36     | expr • LOGIC_OP expr

    REL_OP    shift, and go to state 62
    LOGIC_OP  shift, and go to state 63


State 45

   23 while_stmt: WHILE '(' cond • ')' ':' INDENT stmt_list DEDENT

    ')'  shift, and go to state 64


State 46

   24 for_stmt: FOR IDENTIFIER IN • expr ':' INDENT stmt_list DEDENT

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 65
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 47

   54 expr_list: expr • expr_list_tail

    ','  shift, and go to state 66

    $default  reduce using rule 55 (expr_list_tail)

    expr_list_tail  go to state 67


State 48

   10 print_stmt: PRINT '(' expr_list • ')'

    ')'  shift, and go to state 68


State 49

   25 class_def: CLASS IDENTIFIER ':' • inheritance INDENT stmt_list DEDENT

    IDENTIFIER  shift, and go to state 69

    $default  reduce using rule 26 (inheritance)

    inheritance  go to state 70


State 50

   30 func_def: DEF IDENTIFIER '(' • param_list ')' ':' INDENT stmt_list DEDENT

    IDENTIFIER  shift, and go to state 71

    $default  reduce using rule 31 (param_list)

    param_list  go to state 72


State 51

   52 call_expr: IDENTIFIER '(' • expr_list ')'

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    $default  reduce using rule 53 (expr_list)

    expr       go to state 47
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39
    expr_list  go to state 73


State 52

   41 expr: IDENTIFIER '.' • IDENTIFIER

    IDENTIFIER  shift, and go to state 74


State 53

   49 factor: IDENTIFIER •

    $default  reduce using rule 49 (factor)


State 54

   51 factor: UNARY_OP factor •

    $default  reduce using rule 51 (factor)


State 55

   48 factor: '(' expr • ')'

    ')'  shift, and go to state 75


State 56

   43 expr_tail: ADD_OP • term expr_tail

    IDENTIFIER  shift, and go to state 53
    NUMBER      shift, and go to state 32
    UNARY_OP    shift, and go to state 34
    '('         shift, and go to state 35

    term    go to state 76
    factor  go to state 38


State 57

   38 expr: term expr_tail •

    $default  reduce using rule 38 (expr)


State 58

   46 term_tail: MUL_OP • factor term_tail

    IDENTIFIER  shift, and go to state 53
    NUMBER      shift, and go to state 32
    UNARY_OP    shift, and go to state 34
    '('         shift, and go to state 35

    factor  go to state 77


State 59

   45 term: factor term_tail •

    $default  reduce using rule 45 (term)


State 60

   37 cond: NOT expr •

    $default  reduce using rule 37 (cond)


State 61

   17 if_stmt: IF '(' cond ')' • ':' INDENT stmt_list DEDENT if_stmt_tail

    ':'  shift, and go to state 78


State 62

   35 cond: expr REL_OP • expr

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 79
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 63

   36 cond: expr LOGIC_OP • expr

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 80
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 64

   23 while_stmt: WHILE '(' cond ')' • ':' INDENT stmt_list DEDENT

    ':'  shift, and go to state 81


State 65

   24 for_stmt: FOR IDENTIFIER IN expr • ':' INDENT stmt_list DEDENT

    ':'  shift, and go to state 82


State 66

   56 expr_list_tail: ',' • expr expr_list_tail

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 83
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 67

   54 expr_list: expr expr_list_tail •

    $default  reduce using rule 54 (expr_list)


State 68

   10 print_stmt: PRINT '(' expr_list ')' •

    $default  reduce using rule 10 (print_stmt)


State 69

   27 inheritance: IDENTIFIER • inheritance_tail

    ','  shift, and go to state 84

    $default  reduce using rule 28 (inheritance_tail)

    inheritance_tail  go to state 85


State 70

   25 class_def: CLASS IDENTIFIER ':' inheritance • INDENT stmt_list DEDENT

    INDENT  shift, and go to state 86


State 71

   32 param_list: IDENTIFIER • param_list_tail

    ','  shift, and go to state 87

    $default  reduce using rule 33 (param_list_tail)

    param_list_tail  go to state 88


State 72

   30 func_def: DEF IDENTIFIER '(' param_list • ')' ':' INDENT stmt_list DEDENT

    ')'  shift, and go to state 89


State 73

   52 call_expr: IDENTIFIER '(' expr_list • ')'

    ')'  shift, and go to state 90


State 74

   41 expr: IDENTIFIER '.' IDENTIFIER •

    $default  reduce using rule 41 (expr)


State 75

   48 factor: '(' expr ')' •

    $default  reduce using rule 48 (factor)


State 76

   43 expr_tail: ADD_OP term • expr_tail

    ADD_OP  shift, and go to state 56

    $default  reduce using rule 44 (expr_tail)

    expr_tail  go to state 91


State 77

   46 term_tail: MUL_OP factor • term_tail

    MUL_OP  shift, and go to state 58

    $default  reduce using rule 47 (term_tail)

    term_tail  go to state 92


State 78

   17 if_stmt: IF '(' cond ')' ':' • INDENT stmt_list DEDENT if_stmt_tail

    INDENT  shift, and go to state 93


State 79

   35 cond: expr REL_OP expr •

    $default  reduce using rule 35 (cond)


State 80

   36 cond: expr LOGIC_OP expr •

    $default  reduce using rule 36 (cond)


State 81

   23 while_stmt: WHILE '(' cond ')' ':' • INDENT stmt_list DEDENT

    INDENT  shift, and go to state 94


State 82

   24 for_stmt: FOR IDENTIFIER IN expr ':' • INDENT stmt_list DEDENT

    INDENT  shift, and go to state 95


State 83

   56 expr_list_tail: ',' expr • expr_list_tail

    ','  shift, and go to state 66

    $default  reduce using rule 55 (expr_list_tail)

    expr_list_tail  go to state 96


State 84

   29 inheritance_tail: ',' • IDENTIFIER inheritance_tail

    IDENTIFIER  shift, and go to state 97


State 85

   27 inheritance: IDENTIFIER inheritance_tail •

    $default  reduce using rule 27 (inheritance)


State 86

   25 class_def: CLASS IDENTIFIER ':' inheritance INDENT • stmt_list DEDENT

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 98


State 87

   34 param_list_tail: ',' • IDENTIFIER param_list_tail

    IDENTIFIER  shift, and go to state 99


State 88

   32 param_list: IDENTIFIER param_list_tail •

    $default  reduce using rule 32 (param_list)


State 89

   30 func_def: DEF IDENTIFIER '(' param_list ')' • ':' INDENT stmt_list DEDENT

    ':'  shift, and go to state 100


State 90

   52 call_expr: IDENTIFIER '(' expr_list ')' •

    $default  reduce using rule 52 (call_expr)


State 91

   43 expr_tail: ADD_OP term expr_tail •

    $default  reduce using rule 43 (expr_tail)


State 92

   46 term_tail: MUL_OP factor term_tail •

    $default  reduce using rule 46 (term_tail)


State 93

   17 if_stmt: IF '(' cond ')' ':' INDENT • stmt_list DEDENT if_stmt_tail

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 101


State 94

   23 while_stmt: WHILE '(' cond ')' ':' INDENT • stmt_list DEDENT

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 102


State 95

   24 for_stmt: FOR IDENTIFIER IN expr ':' INDENT • stmt_list DEDENT

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 103


State 96

   56 expr_list_tail: ',' expr expr_list_tail •

    $default  reduce using rule 56 (expr_list_tail)


State 97

   29 inheritance_tail: ',' IDENTIFIER • inheritance_tail

    ','  shift, and go to state 84

    $default  reduce using rule 28 (inheritance_tail)

    inheritance_tail  go to state 104


State 98

    3 stmt_list: stmt_list • stmt
   25 class_def: CLASS IDENTIFIER ':' inheritance INDENT stmt_list • DEDENT

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 105
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 99

   34 param_list_tail: ',' IDENTIFIER • param_list_tail

    ','  shift, and go to state 87

    $default  reduce using rule 33 (param_list_tail)

    param_list_tail  go to state 106


State 100

   30 func_def: DEF IDENTIFIER '(' param_list ')' ':' • INDENT stmt_list DEDENT

    INDENT  shift, and go to state 107


State 101

    3 stmt_list: stmt_list • stmt
   17 if_stmt: IF '(' cond ')' ':' INDENT stmt_list • DEDENT if_stmt_tail

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 108
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 102

    3 stmt_list: stmt_list • stmt
   23 while_stmt: WHILE '(' cond ')' ':' INDENT stmt_list • DEDENT

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 109
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 103

    3 stmt_list: stmt_list • stmt
   24 for_stmt: FOR IDENTIFIER IN expr ':' INDENT stmt_list • DEDENT

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 110
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 104

   29 inheritance_tail: ',' IDENTIFIER inheritance_tail •

    $default  reduce using rule 29 (inheritance_tail)


State 105

   25 class_def: CLASS IDENTIFIER ':' inheritance INDENT stmt_list DEDENT •

    $default  reduce using rule 25 (class_def)


State 106

   34 param_list_tail: ',' IDENTIFIER param_list_tail •

    $default  reduce using rule 34 (param_list_tail)


State 107

   30 func_def: DEF IDENTIFIER '(' param_list ')' ':' INDENT • stmt_list DEDENT

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 111


State 108

   17 if_stmt: IF '(' cond ')' ':' INDENT stmt_list DEDENT • if_stmt_tail

    ELIF  shift, and go to state 112
    ELSE  shift, and go to state 113

    $default  reduce using rule 20 (if_stmt_tail)

    if_stmt_tail  go to state 114
    elif_stmt     go to state 115
    else_stmt     go to state 116


State 109

   23 while_stmt: WHILE '(' cond ')' ':' INDENT stmt_list DEDENT •

    $default  reduce using rule 23 (while_stmt)


State 110

   24 for_stmt: FOR IDENTIFIER IN expr ':' INDENT stmt_list DEDENT •

    $default  reduce using rule 24 (for_stmt)


State 111

    3 stmt_list: stmt_list • stmt
   30 func_def: DEF IDENTIFIER '(' param_list ')' ':' INDENT stmt_list • DEDENT

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 117
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 112

   21 elif_stmt: ELIF • '(' cond ')' ':' INDENT stmt_list DEDENT

    '('  shift, and go to state 118


State 113

   22 else_stmt: ELSE • ':' INDENT stmt_list DEDENT

    ':'  shift, and go to state 119


State 114

   17 if_stmt: IF '(' cond ')' ':' INDENT stmt_list DEDENT if_stmt_tail •

    $default  reduce using rule 17 (if_stmt)


State 115

   18 if_stmt_tail: elif_stmt • if_stmt_tail

    ELIF  shift, and go to state 112
    ELSE  shift, and go to state 113

    $default  reduce using rule 20 (if_stmt_tail)

    if_stmt_tail  go to state 120
    elif_stmt     go to state 115
    else_stmt     go to state 116


State 116

   19 if_stmt_tail: else_stmt •

    $default  reduce using rule 19 (if_stmt_tail)


State 117

   30 func_def: DEF IDENTIFIER '(' param_list ')' ':' INDENT stmt_list DEDENT •

    $default  reduce using rule 30 (func_def)


State 118

   21 elif_stmt: ELIF '(' • cond ')' ':' INDENT stmt_list DEDENT

    IDENTIFIER    shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    NUMBER        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    UNARY_OP      shift, and go to state 34
    NOT           shift, and go to state 42
    '('           shift, and go to state 35

    cond       go to state 121
    expr       go to state 44
    term       go to state 37
    factor     go to state 38
    call_expr  go to state 39


State 119

   22 else_stmt: ELSE ':' • INDENT stmt_list DEDENT

    INDENT  shift, and go to state 122


State 120

   18 if_stmt_tail: elif_stmt if_stmt_tail •

    $default  reduce using rule 18 (if_stmt_tail)


State 121

   21 elif_stmt: ELIF '(' cond • ')' ':' INDENT stmt_list DEDENT

    ')'  shift, and go to state 123


State 122

   22 else_stmt: ELSE ':' INDENT • stmt_list DEDENT

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 124


State 123

   21 elif_stmt: ELIF '(' cond ')' • ':' INDENT stmt_list DEDENT

    ':'  shift, and go to state 125


State 124

    3 stmt_list: stmt_list • stmt
   22 else_stmt: ELSE ':' INDENT stmt_list • DEDENT

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 126
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 125

   21 elif_stmt: ELIF '(' cond ')' ':' • INDENT stmt_list DEDENT

    INDENT  shift, and go to state 127


State 126

   22 else_stmt: ELSE ':' INDENT stmt_list DEDENT •

    $default  reduce using rule 22 (else_stmt)


State 127

   21 elif_stmt: ELIF '(' cond ')' ':' INDENT • stmt_list DEDENT

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 128


State 128

    3 stmt_list: stmt_list • stmt
   21 elif_stmt: ELIF '(' cond ')' ':' INDENT stmt_list • DEDENT

    IDENTIFIER  shift, and go to state 4
    DEDENT      shift, and go to state 129
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    PRINT       shift, and go to state 8
    CLASS       shift, and go to state 9
    DEF         shift, and go to state 10
    RETURN      shift, and go to state 11

    stmt           go to state 12
    simple_stmt    go to state 13
    assign_stmt    go to state 14
    print_stmt     go to state 15
    return_stmt    go to state 16
    compound_stmt  go to state 17
    if_stmt        go to state 18
    while_stmt     go to state 19
    for_stmt       go to state 20
    class_def      go to state 21
    func_def       go to state 22


State 129

   21 elif_stmt: ELIF '(' cond ')' ':' INDENT stmt_list DEDENT •

    $default  reduce using rule 21 (elif_stmt)
